Refactor code and separate library and compiler